--- a/styles.css
+++ b/styles.css
@@ -1041,6 +1041,168 @@ a {
 
 }
 
+/**************************************399 px and below***************************************************************/
+
+/**************************************399 px and below***************************************************************/
+
+@media only screen and (min-width: 200px) and (max-width: 399px) {
+
+    .nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        width: 105vw;
+    }
+  
+    #home {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }   
+      
+    .cello-container img {
+      position: relative;
+      width: 100vw; 
+      height: auto; 
+      opacity: 0.67; 
+      top: -29.2%;
+      margin-top: 43px;
+    }
+  
+    .me {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      top: -77%;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 1.2em; /* Adjusted font size for smaller screens */
+      color: antiquewhite;
+      text-shadow: 2px 2px 5px black;
+      z-index: 1;
+      text-align: center;
+    }
+  
+    #work {
+      display: block;
+      position: relative;
+      width: 100%;
+      height: 100%;
+      bottom: 390px;
+      background-image: url(images/bg2.png);
+    }
+  
+    .boxes-container {
+      display: flex;
+      position: relative;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      height: auto;
+      width: 90%;
+      left: 2.3%;
+      color: antiquewhite;
+    }
+  
+    .box {
+      width: 140px; /* Adjusted width for smaller screens */
+      height: 140px; /* Adjusted height for smaller screens */
+      margin: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 15px; /* Adjusted padding for smaller screens */
+      z-index: 2;
+    }
+  
+    .box img {
+      max-width: 120%; /* Adjusted max-width for smaller screens */
+      max-height: 90%; /* Adjusted max-height for smaller screens */
+      margin: 5px; /* Adjusted margin for smaller screens */
+    }
+  
+    #contact {
+      display: inline-block;
+      position: absolute;
+      height: 90%;
+      width: 100%;
+      bottom: -130%;
+      background-image: url(images/bgcontact.png);
+      background-repeat: no-repeat;
+      overflow: hidden;
+    }
+  
+    .full-body-container {
+      display: flex;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      height: 100%; 
+    }
+  
+    .full-body-container img {
+      position: relative;
+      max-width: 100%;
+      max-height: 100%;
+      left: 2%;
+      opacity: 95%;
+    }
+  
+    #email {
+      position: relative;
+      display: inline-block;
+      font-size: 1em; /* Adjusted font size for smaller screens */
+      color: antiquewhite;
+      bottom: 97%;
+      max-width: 100%;
+      max-height: 50%;
+      margin-right: 1%;
+      padding-left: 8%; /* Adjusted padding for smaller screens */
+      opacity: 95%;
+      z-index: 2;
+    }
+  
+    #email a {
+      color: #41aa61; 
+      text-decoration: none;
+      cursor: pointer;
+    }
+  
+    #jack {
+      position: relative;
+      display: inline-block;
+      bottom: 300px; /* Adjusted bottom position for smaller screens */
+      max-width: 100%;
+      max-height: 100%;
+      margin-left: -.3%;
+      opacity: 95%;
+    }
+  
+    .footer {
+      display: block;
+      position: relative;
+      height: 100%;
+      width: 100%;
+      bottom: -185px;
+      background-color: rgb(69,72,77);
+      overflow: hidden;
+      color: antiquewhite;
+      border-bottom: 2px solid black;
+    }
+  
+    #copyright {
+      width: 100%;
+      right: 170px;
+      text-align: center;
+      color: antiquewhite;
+      z-index: 1;
+    }
+  
+  }
+  
 
 
 
