--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ html {
   
     /* ---------------- Mobile ---------------*/
   
-    @media (max-width: 576px) {
+    @media only screen and (max-width: 576px) {
       .full-body-container {
         position: relative;
         width: 95%;
@@ -157,10 +157,20 @@ html {
       }
 
       #me {
-        font-size: 2rem; /* Adjust the font size for smaller screens */
+        position: relative;
+        top: 140px;
+        font-weight: bolder;
+        font-size: 2.7rem;
+        color: whitesmoke;
+        padding-top: 22%;
+        text-shadow: 
+        -1px -1px 0 #000, /* Top-left shadow */
+         1px -1px 0 #000, /* Top-right shadow */
+        -1px  1px 0 #000, /* Bottom-left shadow */
+         5px  1px 0 #000; /* Bottom-right shadow */
       }
       #mt {
-        font-size: 0.7rem; /* Adjust the font size for smaller screens */
+        font-size: 2.4rem; /* Adjust the font size for smaller screens */
       }
   
     }
